@@ -15,6 +15,8 @@ Broker:
   Closes #1718.
 - Fix "slow" file based logging by switching to line based buffering.
   Closes #1689. Closes #1741.
+- Log protocol error message where appropriate from a bad UNSUBSCRIBE, rather
+  than the generic "socket error".
 
 Client library:
 - Improved documentation around connect callback return codes. Close #1730.
